tests/fixtures/security/certs/invalid/missing_trust_anchor.eval
subject_fingerprint=3333333333333333333333333333333333333333333333333333333333333333
validation_time_utc=2026-03-11T08:30:00Z
revocation_policy=require_good
revocation|3333333333333333333333333333333333333333333333333333333333333333|good|file://revocation/cache/root
revocation|2222222222222222222222222222222222222222222222222222222222222222|good|file://revocation/cache/root
